Feature: Nuevo endpoint para obtener los usuarios que tengo en mi listado de contactos
